fix contrast error button secondary

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -137,12 +137,12 @@ nav {
 
 .btn-secondary {
   background: transparent;
-  color: #667eea;
-  border: 2px solid #667eea;
+  color: #1F42E0;
+  border: 2px solid #705fbf;
 }
 
 .btn-secondary:hover {
-  background: #667eea;
+  background: #705fbf;
   color: white;
   transform: translateY(-3px);
 }
